@@ -1,2 +1,5 @@
 panel-plugin/time-out.c
+panel-plugin/time-out-lock-screen.c
+panel-plugin/time-out-countdown.c
+panel-plugin/time-out-fadeout.c
 panel-plugin/xfce4-time-out-plugin.desktop.in.in
