@@ -1,5 +1,10 @@
 2007-05-06	Jannis Pohlmann <jannis@xfce.org>
 
+	* panel-plugin/time-out-lock-screen.c: Remove debug statement
+	  and add a new translatable string.
+
+2007-05-06	Jannis Pohlmann <jannis@xfce.org>
+
 	* Initial import of a complete rewrite of the plugin. This one
 	  is much cleaner and more reliable (no timer race conditions
 	  anymore).
